load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "io.harness.MicroserviceInterfaceTool",
    visibility = ["//visibility:public"],
    deps = [
        "//920-delegate-agent-beans:module",
        "//920-delegate-service-beans:module",
        "//920-ng-signup:module",
        "//925-enforcement-service:module",
        "//925-subscription-service:module",
        "//930-delegate-tasks:module",
        "//930-ng-core-clients:module",
        "//930-ng-license-manager:module",
        "//935-analyser-service:module",
        "//935-subscription-sdk:module",
        "//937-persistence-tracer:module",
        "//940-cg-audit-service:module",
        "//940-feature-flag:module",
        "//940-ng-audit-service:module",
        "//940-notification-client:module",
        "//940-primary-version-manager:module",
        "//940-resource-group-beans:module",
        "//940-secret-manager-client:module",
        "//942-enforcement-sdk:module",
        "//943-enforcement-beans:module",
        "//945-account-mgmt:module",
        "//945-license-usage-sdk:module",
        "//945-ng-audit-client:module",
        "//950-command-library-common:module",
        "//950-delegate-tasks-beans:module",
        "//959-file-service-commons:module",
        "//970-ng-commons:module",
        "//970-watcher-beans:module",
        "//980-commons:module",
        "//999-annotations:module",
    ],
)
