load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")
load("//:tools/bazel/harness.bzl", "java_library")

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "@maven//:com_esotericsoftware_kryo",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:io_swagger_swagger_annotations",
        "@maven//:org_jooq_jooq",
        "@maven//:org_mongodb_mongo_java_driver",
        "@maven//:org_springframework_data_spring_data_commons",
    ],
)

run_tests()

run_analysis()
