load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

HarnessTeam = "CE"

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_squareup_retrofit2_retrofit",
    ],
)

run_analysis()
