load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

java_library(
    name = "module",
    srcs = glob([
        "src/main/java/**/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "@maven//:com_google_guava_guava",
        "@maven//:com_squareup_retrofit2_converter_gson",
    ],
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    resources = ["//878-ng-common-utilities/src/test/resources:resource"],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_powermock_powermock_api_mockito",
    ],
)

run_tests()

run_analysis()
