load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

java_library(
    name = "maven_deps",
    visibility = ["//visibility:public"],
    exports = [
    ],
)

java_library(
    name = "module",
    srcs = glob([
        "src/main/java/**/*.java",
    ]),
    resources = [
        "//879-pms-sdk/src/main/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "@maven//:io_grpc_grpc_testing",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_mockito_mockito_core",
    ],
)

run_tests()

run_analysis()
