load("//:tools/bazel/harness.bzl", "java_library")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:com_google_inject_guice",
        "@maven//:com_squareup_retrofit2_retrofit",
        "@maven//:io_swagger_core_v3_swagger_annotations",
        "@maven//:io_swagger_swagger_annotations",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

run_analysis()
