load("//:tools/bazel/harness.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis")

HarnessTeam = "GTM"

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "@maven//:com_google_inject_guice",
        "@maven//:io_swagger_core_v3_swagger_annotations",
        "@maven//:io_swagger_swagger_annotations",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
    ],
)

run_analysis()
