load("//:tools/bazel/harness.bzl", "java_library")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_jars = [
        "//950-delegate-tasks-beans/src/main/proto:950_delegate_tasks_beans_java_proto",
    ],
    resources = [
        "//950-delegate-tasks-beans/src/main/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "@maven//:com_amazonaws_aws_java_sdk_core",
        "@maven//:com_amazonaws_aws_java_sdk_ec2",
        "@maven//:com_amazonaws_aws_java_sdk_lambda",
        "@maven//:com_esotericsoftware_kryo",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_github_reinert_jjschema",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_inject_extensions_guice_assistedinject",
        "@maven//:com_google_inject_guice",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_intellij_annotations",
        "@maven//:com_offbytwo_jenkins_jenkins_client",
        "@maven//:commons_codec_commons_codec",
        "@maven//:io_swagger_swagger_annotations",
        "@maven//:javax_validation_validation_api",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_apache_httpcomponents_httpclient",
        "@maven//:org_eclipse_jgit_org_eclipse_jgit",
        "@maven//:org_eclipse_jgit_org_eclipse_jgit_ssh_jsch",
        "@maven//:org_hibernate_hibernate_validator",
        "@maven//:org_json_json",
        "@maven//:org_ldaptive_ldaptive",
        "@maven//:org_mongodb_morphia_morphia",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_springframework_data_spring_data_commons",
        "@maven//:org_springframework_data_spring_data_mongodb",
    ],
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_inject_guice",
        "@maven//:io_dropwizard_dropwizard_jackson",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_mongodb_morphia_morphia",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

run_tests()

run_analysis()
