load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "@maven_debezium//:io_debezium_debezium_api",
        "@maven_debezium//:io_debezium_debezium_connector_mongodb",
        "@maven_debezium//:io_debezium_debezium_core",
        "@maven_debezium//:io_debezium_debezium_embedded",
        "@maven_debezium//:org_mongodb_mongodb_driver_core",
        "@maven_debezium//:org_mongodb_mongodb_driver_sync",
    ],
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    resources = ["//952-debezium-engine/src/test/resources:resource"],
    visibility = ["//visibility:public"],
)

run_tests()

run_analysis()
