load("//:tools/bazel/harness.bzl", "java_library")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = [
        "//955-cg-yaml/src/main/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "@maven//:com_google_code_findbugs_annotations",
    ],
)

run_analysis()
