load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/harness.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis")

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = [],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:com_google_inject_guice",
        "@maven//:com_squareup_retrofit2_retrofit",
    ],
)

run_analysis()
